correct minor bug on horizontal scroll & on elements position

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,14 +48,13 @@ a {
 body,
 html {
   width: 100%;
-  height: 100%;
+  height: fit-content;
+  min-height: 100%;
   background-color: var(--main-color);
   margin: 0;
   position: relative;
   font-size: $base-font-size;
   line-height: $base-line-height;
-  overflow-x: hidden;
-  position: initial;
   
   @media #{$mq-medium} {
     font-size: $base-font-size * 1.2;
@@ -89,6 +88,10 @@ html {
 
 .myx_auto {
   margin: auto;
+}
+
+.h-fit {
+  height: fit-content;
 }
 
 /* Background */
@@ -326,7 +329,10 @@ html {
 
 /* Background menu transition */
 #transition_menu{
-    z-index: 2;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
 }
 
 .transition_color {
@@ -350,6 +356,7 @@ html {
 }
 
 .transition_color_2 {
+    z-index: 2;
     background: #222222;
     -webkit-transition-delay: 0.1s;
     transition-delay: 0.1s;
@@ -369,7 +376,7 @@ html {
   width: 100%;
   max-width: $bp-large;
   height: 6rem;
-  z-index: 2;
+  z-index: 4;
 
   > div {
     margin: auto 3rem;
@@ -673,7 +680,7 @@ main {
 
 //! ABOUT
 
-.about_content {
+.about_content_description {
   margin: 0rem 3rem;
 
   @media #{$mq-medium} {
@@ -681,7 +688,7 @@ main {
   }
 }
 
-.about_content:first-child {
+.about_content_description:first-child {
   margin: 12rem 3rem;
 }
 
@@ -760,38 +767,22 @@ main {
 .about_grid5 { grid-area: 3 / 2 / 5 / 3; }
 .about_grid6 { grid-area: 3 / 1 / 5 / 2; }
 
-// ---------- SCROLLING STYLES ---------- //
-
-$panelcount: 1; // set # of panels/sections here
-
-.wrapper{
-  width: 100%;
-  height: 100%;
+.about_content_parcours {
   overflow: hidden;
-  perspective: 1000;
 }
 
-.section {
-  & {
-    height: 100%;
-    width: 100%;
-    float: left;
-    background: #F64747;
-    position: relative;
-  }
+.about_content_parcours div {
+  position: relative;
+}
 
-  &s {
-    width: percentage($panelcount);
-    height: 100%;
-  }
-  
-  &__title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
-    font-size: 30px;
-    color: #fff;
-  }
+#horizontal_container {
+  width: 5000px;
+  height: 100vh;
+}
+
+#horizontal_container>div {
+  position: absolute;
+  top: 50%;
+  left: 3%;
+  transform: translateY(-50%);
 }
